<resources>
    <string name="app_name">EasyTax</string>
    <string name="Welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="prompt_email">  Email</string>
    <string name="prompt_password">Passsword</string>
    <string name="prompt_confirm_password">Confirm passsword</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password not valid</string>
    <string name="login_failed">"Login failed"</string>
    <string name="selectTxt">Please Select A Form</string>
    <string name="cyberzen">CyberZen.</string>
    <string name="hello_there">Hello There!</string>
    <string name="need_help">Need Help?</string>
    <string name="powered_by">Powered by</string>
    <string name="family_tax_form">Family Tax Form</string>
    <string name="business_tax_form">Business Tax Form</string>
    <string name="personal_tax_form">Personal Tax Form</string>
    <string name="full_name">Full name</string>
    <string name="register">Register</string>
    <string name="camera">Import</string>
    <string name="personalTaxOneTitle">Personal Tax Form</string>
    <string name="_1_basic_peronsal_amount">1. Basic Peronsal Amount</string>
    <string name="_2_canada_caregiver_amount_for_infirm_children_under_age_18">2. Canada caregiver amount for infirm children under age 18</string>
    <string name="_3_age_amount">3. Age amount</string>
    <string name="_4_pension_income_amount">4. Pension income amount</string>
    <string name="save_as">Save AS</string>
    <string name="print">Print</string>
    <string name="contact_us">Contact Us</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="easy_tax">Easy TAX</string>
    <string name="someone_gmail_com">Someone@gmail.com</string>

    <string name="txt_message">No Text Available</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_hint">6475555555</string>


</resources>